...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:background="@null"
        android:gravity="center|start"
        android:hint="@string/search"
...
